Refactor MenuPanel and ControllerOne: enhance button actions for player selection and improve game state handling for Human vs AI and Human vs Human scenarios.